# Address-Poisoning-Detection-EVM-Compatible

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
getData/: extract.py  get_rollup_data.py  to_parquet.py
src/: Poisoning-Results-Final.rar
src/multichain_analysis/: count.py  delta.py  eoa_vs_sc.py  main.py  repeats.py  tokens.py
src/poisoning_detector/: analyse_results.py  categorize.py  find_previous_transfers.py  get_token_info.py  get_tokens.py  main.py  steps_runner.py  system_contracts.py
src/tokens/: arbitrum_token_info.txt  arbitrum_token_symbols_prices.txt  avalanche_token_info.txt  avalanche_token_symbols_prices.txt  ethereum_token_info.txt  ethereum_token_symbols_prices.txt  gnosis_token_info.txt  gnosis_token_symbols_prices.txt  opbnb_token_info.txt  opbnb_token_symbols_prices.txt  optimism_token_info.txt  optimism_token_symbols_prices.txt  polygonzk_token_info.txt  polygonzk_token_symbols_prices.txt
tests/: conftest.py  test_class.py
